external-crates/move/crates/move-package-alt/tests/data/invalid_environment2/Move@parsed.snap
---
source: crates/move-package-alt/tests/test_runner.rs
---
error: TOML parse error at line 8, column 1
  |
8 | ~124512 = "35834a8a"
  | ^
invalid key
